1999-11-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(moveLoop):
	(Maximize):
	* fvwm/borders.c (SetupFrame):
	(SetShape):
	* fvwm/events.c (HandleConfigureRequest):
	fixed bottom title bugs

	* fvwm/builtins.c (WindowShade):
	Worked *very* hard to reduce flickering with animated shading bottom
	titles. It can't be completely suppressed without tremendous efforts.

	* fvwm/borders.c (SetupTitleBar):
	code to place buttons and title bar moved to a separate function.

	* fvwm/builtins.c (WindowShade):
	fixed screwed animation of windowshading in pager by disabling it.

	* fvwm/add_window.c (setup_frame_window):
	fixed accessing the border of windows without handles.

	* fvwm/menus.c (menuShortcuts):
	fixed xhift-meta-tab, shift-tab bindings

	* fvwm/fvwm2.1:
	ispell session

1999-11-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/session.c (LoadWindowStates):
	(SaveWindowStates):
	* fvwm/add_window.c (AddWindow):
	* fvwm/builtins.c (WindowShade):
	* fvwm/move_resize.c (Maximize):
	(resize_window):
	* fvwm/borders.c (RedrawBorder):
	* fvwm/builtins.c (WindowShade):
	shaded windows get a full border
	new style 'TitleAtBottom'

	* fvwm/borders.c (SetupFrame):
	* fvwm/style.h:
	* fvwm/window_flags.h:
	* fvwm/fvwm.h (struct):
	* fvwm/style.c (ProcessNewStyle):

	* fvwm/builtins.c (WindowShade):
	windows without title can be shaded too

	* fvwm/style.c (handle_window_style_change):
	* fvwm/add_window.c (setup_style_and_decor):
	(destroy_title_window):
	(change_title_window):
	(setup_button_windows):
	(destroy_button_windows):
	(change_button_windows):
	(setup_resize_handle_windows):
	(destroy_resize_handle_windows):
	(change_resize_handle_windows):
	(setup_frame_stacking):
	(setup_auxiliary_windows):
	(change_auxiliary_windows):
	(destroy_auxiliary_windows):
	(AddWindow):
	changind decor related styles is much faster
	minimised overhead for changed decorations

	* fvwm/decorations.c (SelectDecor):